# etl_parquet_athena_glue

./: README.md  pyproject.toml
etl_parquet_athena_glue/: extract.py  src.py  transform.py
output_files/: json_extract.json  spotfy_playlist.parquet
